fix:パスを修正

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,5 +1,5 @@
 .home-background {
-  background-image: url('../../assets/nightmare4.png');
+  background-image: url('/images/nightmare4.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
